--- a/pages/11553.html
+++ b/pages/11553.html
@@ -654,6 +654,12 @@ margin-left: 0em;
 </li>
 </ul>
 
+<p>Specifically in relation to the putative <a class="existingWikiWord" href="/nlab/show/K-theory">K-theory</a>-classification of <a class="existingWikiWord" href="/nlab/show/D-brane+charge">D-brane charge</a>:</p>
+
+<ul>
+<li id="GarciaUranga05">Inaki Garcia-Etxebarria, <a class="existingWikiWord" href="/nlab/show/Angel+Uranga">Angel Uranga</a>, <em>From F/M-theory to K-theory and back</em>, JHEP 0602:008,2006 (<a href="https://arxiv.org/abs/hep-th/0510073">arXiv:hep-th/0510073</a>)</li>
+</ul>
+
 <p>Specifically in <a class="existingWikiWord" href="/nlab/show/M-theory+on+G2-manifolds">M-theory on G2-manifolds</a>:</p>
 
 <ul>
@@ -721,14 +727,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 26, 2018 at 08:54:11.
+  Last revised on October 26, 2018 at 09:29:09.
   See the <a href="https://ncatlab.org/nlab/history/duality between M/F-theory and heterotic string theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/duality+between+M%2FF-theory+and+heterotic+string+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/duality+between+M%2FF-theory+and+heterotic+string+theory/11" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(11 revisions)</span> | <a href="/nlab/show/diff/duality+between+M%2FF-theory+and+heterotic+string+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/duality+between+M%2FF-theory+and+heterotic+string+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/duality+between+M%2FF-theory+and+heterotic+string+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/duality+between+M%2FF-theory+and+heterotic+string+theory/12" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(12 revisions)</span> | <a href="/nlab/show/diff/duality+between+M%2FF-theory+and+heterotic+string+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/duality+between+M%2FF-theory+and+heterotic+string+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/duality between M/F-theory and heterotic string theory/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
