--- a/pages/17211.html
+++ b/pages/17211.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -836,7 +836,7 @@ margin-left: 0em;
 
 <ol>
 <li>
-<p>is <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">(</mo><mi>m</mi><mo>−</mo><mn>1</mn><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">(m-1)</annotation></semantics></math>-<a class="existingWikiWord" href="/nlab/show/n-connected+object+of+an+%28infinity%2C1%29-topos">(m-1)-connected</a></p>
+<p>is <a class="existingWikiWord" href="/nlab/show/n-connected+object+of+an+%28infinity%2C1%29-topos">(m-1)-connected</a></p>
 </li>
 
 <li>
@@ -866,7 +866,8 @@ margin-left: 0em;
 
 </annotation></semantics></math></div>
 <p>is a <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mover><mi>ρ</mi><mo>¯</mo></mover> <mrow><mi>d</mi><mo>−</mo><mi>n</mi><mo>−</mo><mn>1</mn></mrow></msub></mrow><annotation encoding="application/x-tex">\overline{\rho}_{d-n-1}</annotation></semantics></math>-<a class="existingWikiWord" href="/nlab/show/torsion+subgroup">torsion group</a>:</p>
-<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msub><mover><mi>ρ</mi><mo>¯</mo></mover> <mrow><mi>d</mi><mo>−</mo><mi>n</mi><mo>−</mo><mn>1</mn></mrow></msub><mi>coker</mi><mo stretchy="false">(</mo><msup><mi>b</mi> <mi>n</mi></msup><mo stretchy="false">)</mo><mspace width="thickmathspace"></mspace><mo>≃</mo><mspace width="thickmathspace"></mspace><mn>0</mn></mrow><annotation encoding="application/x-tex">
+<div class="maruku-equation" id="eq:TorsionEstimateCokernel"><span class="maruku-eq-number">(2)</span><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msub><mover><mi>ρ</mi><mo>¯</mo></mover> <mrow><mi>d</mi><mo>−</mo><mi>n</mi><mo>−</mo><mn>1</mn></mrow></msub><mi>coker</mi><mo stretchy="false">(</mo><msup><mi>b</mi> <mi>n</mi></msup><mo stretchy="false">)</mo><mspace width="thickmathspace"></mspace><mo>≃</mo><mspace width="thickmathspace"></mspace><mn>0</mn></mrow><annotation encoding="application/x-tex">
+  
   \overline{\rho}_{d-n-1} coker(b^n) \;\simeq\; 0
 
 </annotation></semantics></math></div></li>
@@ -894,6 +895,77 @@ margin-left: 0em;
 </div>
 
 <p>(<a href="#Arlettaz04">Arlettaz 04, theorem 1.2</a>)</p>
+
+<div class="num_example">
+<h6 id="example">Example</h6>
+
+<p>Let <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>X</mi></mrow><annotation encoding="application/x-tex">X</annotation></semantics></math> be a <a class="existingWikiWord" href="/nlab/show/manifold">manifold</a></p>
+
+<ul>
+<li>
+<p>of <a class="existingWikiWord" href="/nlab/show/dimension">dimension</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>d</mi><mo>=</mo><mn>6</mn></mrow><annotation encoding="application/x-tex">d = 6</annotation></semantics></math></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/simply+connected+topological+space">simply connected</a> with <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>π</mi> <mn>2</mn></msub><mo stretchy="false">(</mo><mi>X</mi><mo stretchy="false">)</mo><mo>≠</mo><mn>0</mn></mrow><annotation encoding="application/x-tex">\pi_2(X) \neq 0</annotation></semantics></math></p>
+</li>
+</ul>
+
+<p>then Prop. <a class="maruku-ref" href="#BoundsOnCoKernelOfBoardmandFromStableCohomotopyToOrdinaryCohomology"></a> asserts that the <a class="existingWikiWord" href="/nlab/show/cokernel">cokernel</a> of the <a class="existingWikiWord" href="/nlab/show/Boardman+homomorphism">Boardman homomorphism</a></p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msup><mi>β</mi> <mn>4</mn></msup><mspace width="thickmathspace"></mspace><mo lspace="verythinmathspace">:</mo><mspace width="thickmathspace"></mspace><msup><mi>𝕊</mi> <mn>4</mn></msup><mo stretchy="false">(</mo><mi>X</mi><mo stretchy="false">)</mo><mo>⟶</mo><msup><mi>H</mi> <mn>4</mn></msup><mo stretchy="false">(</mo><mi>X</mi><mo>,</mo><mi>ℤ</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">
+  \beta^4
+  \;\colon\;
+  \mathbb{S}^4(X)
+  \longrightarrow
+  H^4( X, \mathbb{Z} )
+
+</annotation></semantics></math></div>
+<p>in</p>
+
+<ul>
+<li>degree <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi><mo>=</mo><mn>4</mn></mrow><annotation encoding="application/x-tex">n = 4</annotation></semantics></math></li>
+</ul>
+
+<p>is <a class="existingWikiWord" href="/nlab/show/torsion+subgroup">2-torsion</a>:</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mn>2</mn><mi>coker</mi><mo stretchy="false">(</mo><msup><mi>β</mi> <mn>4</mn></msup><mo stretchy="false">)</mo><mspace width="thickmathspace"></mspace><mo>=</mo><mspace width="thickmathspace"></mspace><mn>0</mn><mspace width="thinmathspace"></mspace><mo>.</mo></mrow><annotation encoding="application/x-tex">
+  2 coker(\beta^4) \;=\; 0
+  \,.
+
+</annotation></semantics></math></div>
+<p>This is because in this case <a class="maruku-eqref" href="#eq:TorsionEstimateCokernel">(2)</a> gives that the relevant torsion degree is</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mrow><mtable displaystyle="true" columnalign="right left right left right left right left right left" columnspacing="0em"><mtr><mtd><msub><mover><mi>ρ</mi><mo>¯</mo></mover> <mrow><mi>d</mi><mo>−</mo><mi>n</mi><mo>−</mo><mn>1</mn></mrow></msub></mtd> <mtd><mo>=</mo><msub><mover><mi>ρ</mi><mo>¯</mo></mover> <mn>1</mn></msub></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>=</mo><mi>exp</mi><mo stretchy="false">(</mo><msub><mi>π</mi> <mn>1</mn></msub><mo stretchy="false">(</mo><mi>𝕊</mi><mo stretchy="false">)</mo><mo stretchy="false">)</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>=</mo><mi>exp</mi><mo stretchy="false">(</mo><mi>ℤ</mi><mo stretchy="false">/</mo><mn>2</mn><mo stretchy="false">)</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>=</mo><mn>2</mn></mtd></mtr></mtable></mrow><mspace width="thinmathspace"></mspace><mo>.</mo></mrow><annotation encoding="application/x-tex">
+  \begin{aligned}
+    \overline{\rho}_{d-n-1}
+    &amp; =
+    \overline{\rho}_{1}
+    \\
+    &amp; = \exp( \pi_1(\mathbb{S}) )
+    \\
+    &amp; = \exp( \mathbb{Z}/2 )     
+    \\  
+    &amp; = 2
+  \end{aligned}
+  \,.
+
+</annotation></semantics></math></div>
+<p>Similarly, if instead the manifold has dimension <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>d</mi><mo>=</mo><mn>7</mn></mrow><annotation encoding="application/x-tex">d = 7</annotation></semantics></math> but sticking to degree <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi><mo>=</mo><mn>4</mn></mrow><annotation encoding="application/x-tex">n = 4</annotation></semantics></math>, then the estimate is that the cokernel is 4-torsion, since then</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mrow><mtable displaystyle="true" columnalign="right left right left right left right left right left" columnspacing="0em"><mtr><mtd><msub><mover><mi>ρ</mi><mo>¯</mo></mover> <mrow><mi>d</mi><mo>−</mo><mi>n</mi><mo>−</mo><mn>1</mn></mrow></msub></mtd> <mtd><mo>=</mo><msub><mover><mi>ρ</mi><mo>¯</mo></mover> <mn>1</mn></msub></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>=</mo><mi>exp</mi><mo stretchy="false">(</mo><msub><mi>π</mi> <mn>1</mn></msub><mo stretchy="false">(</mo><mi>𝕊</mi><mo stretchy="false">)</mo><mo stretchy="false">)</mo><mo>⋅</mo><mi>exp</mi><mo stretchy="false">(</mo><msub><mi>π</mi> <mn>2</mn></msub><mo stretchy="false">(</mo><mi>𝕊</mi><mo stretchy="false">)</mo><mo stretchy="false">)</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>=</mo><mi>exp</mi><mo stretchy="false">(</mo><mi>ℤ</mi><mo stretchy="false">/</mo><mn>2</mn><mo stretchy="false">)</mo><mo>⋅</mo><mi>exp</mi><mo stretchy="false">(</mo><mi>ℤ</mi><mo stretchy="false">/</mo><mn>2</mn><mo stretchy="false">)</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>=</mo><mn>2</mn><mo>⋅</mo><mn>2</mn></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>=</mo><mn>4</mn></mtd></mtr></mtable></mrow><mspace width="thinmathspace"></mspace><mo>.</mo></mrow><annotation encoding="application/x-tex">
+  \begin{aligned}
+    \overline{\rho}_{d-n-1}
+    &amp; =
+    \overline{\rho}_{1}
+    \\
+    &amp; = \exp( \pi_1(\mathbb{S}) ) \cdot \exp( \pi_2(\mathbb{S}) )
+    \\
+    &amp; = \exp( \mathbb{Z}/2 ) \cdot \exp( \mathbb{Z}/2 ) 
+    \\  
+    &amp; = 2 \cdot 2
+    \\
+    &amp; = 4
+  \end{aligned}
+  \,.
+
+</annotation></semantics></math></div></div>
 
 <h3 id="ForComplexOrientedCohomologyTheories">For complex oriented cohomology theories</h3>
 
@@ -932,14 +1004,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 23, 2018 at 09:16:46.
+  Last revised on October 26, 2018 at 09:51:56.
   See the <a href="https://ncatlab.org/nlab/history/Boardman homomorphism" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Boardman+homomorphism" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Boardman+homomorphism/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/Boardman+homomorphism" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Boardman+homomorphism" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Boardman+homomorphism" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Boardman+homomorphism/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/Boardman+homomorphism" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Boardman+homomorphism" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Boardman homomorphism/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
