--- a/pages/6713.html
+++ b/pages/6713.html
@@ -1250,7 +1250,13 @@ margin-left: 0em;
 <p>Discussion of the alleged K-theory classification of Dbrane charge in relation to the <a class="existingWikiWord" href="/nlab/show/M-theory">M-theory</a> <a class="existingWikiWord" href="/nlab/show/supergravity+C-field">supergravity C-field</a> is in</p>
 
 <ul>
-<li id="FMW00">D. Diaconescu, <a class="existingWikiWord" href="/nlab/show/Gregory+Moore">Gregory Moore</a>, <a class="existingWikiWord" href="/nlab/show/Edward+Witten">Edward Witten</a>, <em><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>E</mi> <mn>8</mn></msub></mrow><annotation encoding="application/x-tex">E_8</annotation></semantics></math> Gauge Theory, and a Derivation of K-Theory from M-Theory</em>, Adv.Theor.Math.Phys.6:1031-1134,2003 (<a href="http://arxiv.org/abs/hep-th/0005090">arXiv:hep-th/0005090</a>), summarised in <em>A Derivation of K-Theory from M-Theory</em> (<a href="http://arxiv.org/abs/hep-th/0005091">arXiv:hep-th/0005091</a>)</li>
+<li id="DMW00">D. Diaconescu, <a class="existingWikiWord" href="/nlab/show/Gregory+Moore">Gregory Moore</a>, <a class="existingWikiWord" href="/nlab/show/Edward+Witten">Edward Witten</a>, <em><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>E</mi> <mn>8</mn></msub></mrow><annotation encoding="application/x-tex">E_8</annotation></semantics></math> Gauge Theory, and a Derivation of K-Theory from M-Theory</em>, Adv.Theor.Math.Phys.6:1031-1134,2003 (<a href="http://arxiv.org/abs/hep-th/0005090">arXiv:hep-th/0005090</a>), summarised in <em>A Derivation of K-Theory from M-Theory</em> (<a href="http://arxiv.org/abs/hep-th/0005091">arXiv:hep-th/0005091</a>)</li>
+</ul>
+
+<p>See also</p>
+
+<ul>
+<li id="GarciaUranga05">Inaki Garcia-Etxebarria, <a class="existingWikiWord" href="/nlab/show/Angel+Uranga">Angel Uranga</a>, <em>From F/M-theory to K-theory and back</em>, JHEP 0602:008,2006 (<a href="https://arxiv.org/abs/hep-th/0510073">arXiv:hep-th/0510073</a>)</li>
 </ul>
 
 <p>For more on this perspective as 10d type II as a <a class="existingWikiWord" href="/nlab/show/self-dual+higher+gauge+theory">self-dual higher gauge theory</a> in the boudnary of a kind of <a class="existingWikiWord" href="/nlab/show/higher+dimensional+Chern-Simons+theory">11-d Chern-Simons theory</a> is in</p>
@@ -1342,14 +1348,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 25, 2018 at 11:17:45.
+  Last revised on October 26, 2018 at 09:38:42.
   See the <a href="https://ncatlab.org/nlab/history/D-brane" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/D-brane" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/D-brane/67" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(67 revisions)</span> | <a href="/nlab/show/diff/D-brane" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/D-brane" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/D-brane" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/D-brane/68" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(68 revisions)</span> | <a href="/nlab/show/diff/D-brane" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/D-brane" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/D-brane/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
