--- a/pages/6468.html
+++ b/pages/6468.html
@@ -415,7 +415,7 @@ margin-left: 0em;
 
 <h3 id="cohomology">Cohomology</h3>
 
-<div class="num_prop">
+<div class="num_prop" id="IntegralCohomology">
 <h6 id="proposition">Proposition</h6>
 
 <p><strong>(<a class="existingWikiWord" href="/nlab/show/integral+cohomology">integral cohomology</a> of <a class="existingWikiWord" href="/nlab/show/K3-surface">K3-surface</a>)</strong></p>
@@ -626,14 +626,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 26, 2018 at 09:28:37.
+  Last revised on October 26, 2018 at 10:12:45.
   See the <a href="https://ncatlab.org/nlab/history/K3 surface" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/K3+surface" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/K3+surface/16" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(16 revisions)</span> | <a href="/nlab/show/diff/K3+surface" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/K3+surface" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/K3+surface" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/K3+surface/17" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(17 revisions)</span> | <a href="/nlab/show/diff/K3+surface" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/K3+surface" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/K3 surface/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
