--- a/pages/19719.html
+++ b/pages/19719.html
@@ -365,7 +365,7 @@ margin-left: 0em;
 <ul>
 <li>Create skeletons for all the pages and list the tasks to be done (<a class="existingWikiWord" href="/nlab/show/Mike+Shulman">Mike Shulman</a>)</li>
 
-<li>Define <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>α</mi></mrow><annotation encoding="application/x-tex">\alpha</annotation></semantics></math>-equivalence and capture-avoiding substitution in <a class="existingWikiWord" href="/nlab/show/Initiality+Project+-+Raw+Syntax">Initiality Project - Raw Syntax</a></li>
+<li>Define <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>α</mi></mrow><annotation encoding="application/x-tex">\alpha</annotation></semantics></math>-equivalence and capture-avoiding substitution in <a class="existingWikiWord" href="/nlab/show/Initiality+Project+-+Raw+Syntax">Initiality Project - Raw Syntax</a> (<a class="existingWikiWord" href="/nlab/show/John+Dougherty">John Dougherty</a>)</li>
 
 <li>Define a morphism of CwFs in <a class="existingWikiWord" href="/nlab/show/Initiality+Project+-+Semantics">Initiality Project - Semantics</a>.</li>
 
@@ -395,14 +395,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 26, 2018 at 16:35:25.
+  Last revised on October 26, 2018 at 17:52:10.
   See the <a href="https://ncatlab.org/nlab/history/Initiality Project" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Initiality+Project" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Initiality+Project/35" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(35 revisions)</span> | <a href="/nlab/show/diff/Initiality+Project" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Initiality+Project" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Initiality+Project" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Initiality+Project/36" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(36 revisions)</span> | <a href="/nlab/show/diff/Initiality+Project" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Initiality+Project" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Initiality Project/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
