--- a/pages/19873.html
+++ b/pages/19873.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      quark in nLab
+      B meson in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -284,7 +284,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      quark
+      B meson
   </h1>
 
 
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9187/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -432,27 +432,26 @@ margin-left: 0em;
 <ul>
 <li><a href='#idea'>Idea</a></li>
 <li><a href='#related_concepts'>Related concepts</a></li>
+<li><a href='#references'>References</a></li>
 </ul>
 </div>
 
 <h2 id="idea">Idea</h2>
 
-<p>The <em>quarks</em> is one of the fundamental <a class="existingWikiWord" href="/nlab/show/particles">particles</a>/<a class="existingWikiWord" href="/nlab/show/matter">matter</a> <a class="existingWikiWord" href="/nlab/show/field+%28physics%29">fields</a> in the <a class="existingWikiWord" href="/nlab/show/standard+model+of+particle+physics">standard model of particle physics</a>. Quarks couple to the <a class="existingWikiWord" href="/nlab/show/Yang-Mills+theory">Yang-Mills theory</a> given by <a class="existingWikiWord" href="/nlab/show/QCD">QCD</a>.</p>
+<p>In the <a class="existingWikiWord" href="/nlab/show/standard+model+of+particle+physics">standard model of particle physics</a> a <em>B-meson</em> is a <a class="existingWikiWord" href="/nlab/show/meson">meson</a> which is a <a class="existingWikiWord" href="/nlab/show/bound+state">bound state</a> of two (anti-)<a class="existingWikiWord" href="/nlab/show/quark">bottom quarks</a> (whence “B”).</p>
 
 <h2 id="related_concepts">Related concepts</h2>
 
 <ul>
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/squark">squark</a></p>
-</li>
+<li><a class="existingWikiWord" href="/nlab/show/flavour+anomaly">flavour anomaly</a></li>
+</ul>
 
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/meson">meson</a>, <a class="existingWikiWord" href="/nlab/show/hadron">hadron</a></p>
-</li>
+<h2 id="references">References</h2>
 
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/B+meson">B meson</a></p>
-</li>
+<p>See also</p>
+
+<ul>
+<li>Wikipedia, <em><a href="https://en.wikipedia.org/wiki/B_meson">B meson</a></em></li>
 </ul>
 </body></html>
 
@@ -460,22 +459,22 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 27, 2018 at 07:56:25.
-  See the <a href="https://ncatlab.org/nlab/history/quark" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  Created on October 27, 2018 at 07:58:38.
+  See the <a href="https://ncatlab.org/nlab/history/B meson" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/quark" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/quark/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/quark" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/quark" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  | <a href="https://ncatlab.org/nlab/show/quark/cite" style="color: black">Cite</a>
+  <a href="/nlab/edit/B+meson" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  | <a href="https://ncatlab.org/nlab/show/B meson/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
-    <a href="/nlab/print/quark" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/B+meson" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/quark" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/B+meson" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/quark" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/B+meson" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
