--- a/pages/10305.html
+++ b/pages/10305.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -309,7 +309,7 @@ margin-left: 0em;
 
 <div id="revision">
     <html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xml:lang="en" lang="en">
-<head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title></title></head>
+<head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title>Contents</title></head>
 <body>
 <div class="rightHandSide">
 <div class="toc clickDown" tabindex="0">
@@ -889,6 +889,14 @@ margin-left: 0em;
 </div>
 </div>
 
+<h1 id="contents">Contents</h1>
+<div class='maruku_toc'>
+<ul>
+<li><a href='#examples'>Examples</a></li>
+<li><a href='#references'>References</a></li>
+</ul>
+</div>
+
 <h2 id="examples">Examples</h2>
 
 <ul>
@@ -919,6 +927,8 @@ margin-left: 0em;
 
 <h2 id="references">References</h2>
 
+<p>See also</p>
+
 <ul>
 <li>Wikipedia, <em><a href="http://en.wikipedia.org/wiki/Bound_state">Bound state</a></em></li>
 </ul>
@@ -928,7 +938,7 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 27, 2018 at 07:59:45.
+  Last revised on October 27, 2018 at 08:00:12.
   See the <a href="https://ncatlab.org/nlab/history/bound state" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
