--- a/pages/19873.html
+++ b/pages/19873.html
@@ -348,7 +348,13 @@ margin-left: 0em;
 <p><a class="existingWikiWord" href="/nlab/show/quark">quark</a></p>
 
 <ul>
-<li><a class="existingWikiWord" href="/nlab/show/top+quark">top quark</a></li>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/top+quark">top quark</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/bottom+quark">bottom quark</a></p>
+</li>
 </ul>
 </li>
 
@@ -364,7 +370,13 @@ margin-left: 0em;
 <p><a class="existingWikiWord" href="/nlab/show/meson">meson</a></p>
 
 <ul>
-<li><a class="existingWikiWord" href="/nlab/show/pion">pion</a></li>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/pion">pion</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/B-meson">B-meson</a></p>
+</li>
 </ul>
 </li>
 
@@ -411,6 +423,10 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/dual+graviton">dual graviton</a></p>
 </li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/leptoquark">leptoquark</a></p>
+</li>
 </ul><p><strong><a class="existingWikiWord" href="/nlab/show/auxiliary+fields">auxiliary fields</a></strong></p><ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/ghost+field">ghost field</a></p>
@@ -438,7 +454,7 @@ margin-left: 0em;
 
 <h2 id="idea">Idea</h2>
 
-<p>In the <a class="existingWikiWord" href="/nlab/show/standard+model+of+particle+physics">standard model of particle physics</a> a <em>B-meson</em> is a <a class="existingWikiWord" href="/nlab/show/meson">meson</a> which is a <a class="existingWikiWord" href="/nlab/show/bound+state">bound state</a> of two (anti-)<a class="existingWikiWord" href="/nlab/show/quark">bottom quarks</a> (whence “B”).</p>
+<p>In the <a class="existingWikiWord" href="/nlab/show/standard+model+of+particle+physics">standard model of particle physics</a> a <em>B-meson</em> is a <a class="existingWikiWord" href="/nlab/show/meson">meson</a> which is a <a class="existingWikiWord" href="/nlab/show/bound+state">bound state</a> of two (anti-)<a class="existingWikiWord" href="/nlab/show/bottom+quarks">bottom quarks</a> (whence “B”).</p>
 
 <h2 id="related_concepts">Related concepts</h2>
 
@@ -459,14 +475,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Created on October 27, 2018 at 07:58:38.
+  Last revised on October 27, 2018 at 08:42:34.
   See the <a href="https://ncatlab.org/nlab/history/B meson" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/B+meson" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/B+meson" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/B+meson/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/B+meson" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/B+meson" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/B meson/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
