--- a/pages/19875.html
+++ b/pages/19875.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      top quark in nLab
+      bottom quark in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -284,7 +284,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      top quark
+      bottom quark
   </h1>
 
 
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/8370/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9189/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -454,20 +454,22 @@ margin-left: 0em;
 
 <h2 id="idea">Idea</h2>
 
-<p>In the <a class="existingWikiWord" href="/nlab/show/standard+model+of+particle+physics">standard model of particle physics</a> the <em>top quark</em> is the up-type <a class="existingWikiWord" href="/nlab/show/quark">quark</a> in the third <a class="existingWikiWord" href="/nlab/show/generation+of+fermions">generation of fermions</a>.</p>
+<p>In the <a class="existingWikiWord" href="/nlab/show/standard+model+of+particle+physics">standard model of particle physics</a> the <em>top quark</em> is the down-type <a class="existingWikiWord" href="/nlab/show/quark">quark</a> in the third <a class="existingWikiWord" href="/nlab/show/generation+of+fermions">generation of fermions</a>.</p>
 
-<p>It is the <a class="existingWikiWord" href="/nlab/show/fundamental+particle">fundamental particle</a> with by far the largest <a class="existingWikiWord" href="/nlab/show/rest+mass">rest mass</a> (after <a class="existingWikiWord" href="/nlab/show/Higgs+mechanism">Higgs mechanism</a>). This implies that top quark <a class="existingWikiWord" href="/nlab/show/virtual+particles">virtual particles</a> in <a class="existingWikiWord" href="/nlab/show/Feynman+diagrams">Feynman diagrams</a> typically gives the dominant contribution to <a class="existingWikiWord" href="/nlab/show/loop+order">loop effects</a> in <a class="existingWikiWord" href="/nlab/show/perturbative+quantum+field+theory">perturbative</a> <a class="existingWikiWord" href="/nlab/show/quantum+observables">quantum observables</a>, notably in relation to the <a class="existingWikiWord" href="/nlab/show/Higgs+field">Higgs field</a>.</p>
+<p>The <a class="existingWikiWord" href="/nlab/show/bound+states">bound states</a> of two (anti-)bottom quarks are the <em><a class="existingWikiWord" href="/nlab/show/B+mesons">B mesons</a></em>.</p>
+
+<p>Hints of <a class="existingWikiWord" href="/nlab/show/flavour+anomalies">flavour anomalies</a> indicate that something peculiar may be going on with bottom quarks.</p>
 
 <h2 id="related_concepts">Related concepts</h2>
 
 <ul>
-<li><a class="existingWikiWord" href="/nlab/show/bottom+quark">bottom quark</a></li>
+<li><a class="existingWikiWord" href="/nlab/show/top+quark">top quark</a></li>
 </ul>
 
 <h2 id="references">References</h2>
 
 <ul>
-<li>Wikipedia, <em><a href="https://en.wikipedia.org/wiki/Top_quark">Top quark</a></em></li>
+<li>Wikipedia, <em><a href="https://en.wikipedia.org/wiki/Bottom_quark">Bottom quark</a></em></li>
 </ul>
 </body></html>
 
@@ -475,22 +477,22 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 27, 2018 at 08:38:26.
-  See the <a href="https://ncatlab.org/nlab/history/top quark" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  Created on October 27, 2018 at 08:41:22.
+  See the <a href="https://ncatlab.org/nlab/history/bottom quark" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/top+quark" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/top+quark/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/top+quark" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/top+quark" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  | <a href="https://ncatlab.org/nlab/show/top quark/cite" style="color: black">Cite</a>
+  <a href="/nlab/edit/bottom+quark" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  | <a href="https://ncatlab.org/nlab/show/bottom quark/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
-    <a href="/nlab/print/top+quark" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/bottom+quark" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/top+quark" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/bottom+quark" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/top+quark" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/bottom+quark" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
