--- a/pages/6468.html
+++ b/pages/6468.html
@@ -620,20 +620,26 @@ margin-left: 0em;
 <ul>
 <li><a class="existingWikiWord" href="/nlab/show/Miranda+Cheng">Miranda Cheng</a>, Sarah M. Harrison, Roberto Volpato, Max Zimet, <em>K3 String Theory, Lattices and Moonshine</em> (<a href="https://arxiv.org/abs/1612.04404">arXiv:1612.04404</a>)</li>
 </ul>
+
+<p>Specifically in relation to <a class="existingWikiWord" href="/nlab/show/little+string+theory">little string theory</a>:</p>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/Shamit+Kachru">Shamit Kachru</a>, Arnav Tripathy, Max Zimet, <em>K3 metrics from little string theory</em> (<a href="https://arxiv.org/abs/1810.10540">arXiv:1810.10540</a>)</li>
+</ul>
 </body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on October 26, 2018 at 10:12:45.
+  Last revised on October 27, 2018 at 09:19:27.
   See the <a href="https://ncatlab.org/nlab/history/K3 surface" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/K3+surface" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/K3+surface/17" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(17 revisions)</span> | <a href="/nlab/show/diff/K3+surface" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/K3+surface" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/K3+surface" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/K3+surface/18" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(18 revisions)</span> | <a href="/nlab/show/diff/K3+surface" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/K3+surface" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/K3 surface/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
