--- a/pages/19113.html
+++ b/pages/19113.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/8437/#Item_21" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8437/#Item_24" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -560,14 +560,14 @@ margin-left: 0em;
 <p>Here <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msubsup><mi>G</mi> <mi>ADE</mi> <mi>ab</mi></msubsup></mrow><annotation encoding="application/x-tex">G_{ADE}^{ab}</annotation></semantics></math> denotes the <a class="existingWikiWord" href="/nlab/show/abelianization">abelianization</a> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>G</mi> <mi>ADE</mi></msub></mrow><annotation encoding="application/x-tex">G_{ADE}</annotation></semantics></math> and <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">|</mo><msub><mi>G</mi> <mi>ADE</mi></msub><mo stretchy="false">|</mo></mrow><annotation encoding="application/x-tex">\vert G_{ADE}\vert</annotation></semantics></math> its <a class="existingWikiWord" href="/nlab/show/cardinality">cardinality</a>, hence <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>ℤ</mi><mo stretchy="false">/</mo><mrow><mo stretchy="false">|</mo><msub><mi>G</mi> <mi>ADE</mi></msub><mo stretchy="false">|</mo></mrow></mrow><annotation encoding="application/x-tex">\mathbb{Z}/{\vert G_{ADE}\vert}</annotation></semantics></math> the <a class="existingWikiWord" href="/nlab/show/cyclic+group">cyclic group</a> whose <a class="existingWikiWord" href="/nlab/show/order+of+a+group">order</a> is the cardinality of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>G</mi> <mi>ADE</mi></msub></mrow><annotation encoding="application/x-tex">G_{ADE}</annotation></semantics></math>.</p>
 
 <p>The <a class="existingWikiWord" href="/nlab/show/group+homology">group homology</a> with <a class="existingWikiWord" href="/nlab/show/integer">integer</a> <a class="existingWikiWord" href="/nlab/show/coefficients">coefficients</a> is</p>
-<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msubsup><mi>H</mi> <mi>n</mi> <mi>grp</mi></msubsup><mo stretchy="false">(</mo><msub><mi>G</mi> <mi>ADE</mi></msub><mo>,</mo><mi>ℤ</mi><mo stretchy="false">)</mo><mspace width="thickmathspace"></mspace><mo>≃</mo><mspace width="thickmathspace"></mspace><mrow><mo>{</mo><mrow><mtable><mtr><mtd><mi>ℤ</mi></mtd> <mtd><mo stretchy="false">|</mo></mtd> <mtd><mi>n</mi><mo>=</mo><mn>0</mn></mtd></mtr> <mtr><mtd><msup><mi>G</mi> <mi>ab</mi></msup></mtd> <mtd><mo stretchy="false">|</mo></mtd> <mtd><mi>n</mi><mo>=</mo><mn>1</mn><mspace width="thinmathspace"></mspace><mi>mod</mi><mspace width="thinmathspace"></mspace><mn>4</mn></mtd></mtr> <mtr><mtd><mi>ℤ</mi><mo stretchy="false">/</mo><mrow><mo stretchy="false">|</mo><msub><mi>G</mi> <mi>ADE</mi></msub><mo stretchy="false">|</mo></mrow></mtd> <mtd><mo stretchy="false">|</mo></mtd> <mtd><mi>n</mi><mo>=</mo><mn>3</mn><mspace width="thinmathspace"></mspace><mi>mod</mi><mspace width="thinmathspace"></mspace><mn>4</mn></mtd></mtr> <mtr><mtd><mn>0</mn></mtd> <mtd><mo stretchy="false">|</mo></mtd> <mtd><mtext>otherwise</mtext></mtd></mtr></mtable></mrow></mrow></mrow><annotation encoding="application/x-tex">
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msubsup><mi>H</mi> <mi>n</mi> <mi>grp</mi></msubsup><mo stretchy="false">(</mo><msub><mi>G</mi> <mi>ADE</mi></msub><mo>,</mo><mi>ℤ</mi><mo stretchy="false">)</mo><mspace width="thickmathspace"></mspace><mo>≃</mo><mspace width="thickmathspace"></mspace><mrow><mo>{</mo><mrow><mtable><mtr><mtd><mi>ℤ</mi></mtd> <mtd><mo stretchy="false">|</mo></mtd> <mtd><mi>n</mi><mo>=</mo><mn>0</mn></mtd></mtr> <mtr><mtd><msubsup><mi>G</mi> <mi>ADE</mi> <mi>ab</mi></msubsup></mtd> <mtd><mo stretchy="false">|</mo></mtd> <mtd><mi>n</mi><mo>=</mo><mn>1</mn><mspace width="thinmathspace"></mspace><mi>mod</mi><mspace width="thinmathspace"></mspace><mn>4</mn></mtd></mtr> <mtr><mtd><mi>ℤ</mi><mo stretchy="false">/</mo><mrow><mo stretchy="false">|</mo><msub><mi>G</mi> <mi>ADE</mi></msub><mo stretchy="false">|</mo></mrow></mtd> <mtd><mo stretchy="false">|</mo></mtd> <mtd><mi>n</mi><mo>=</mo><mn>3</mn><mspace width="thinmathspace"></mspace><mi>mod</mi><mspace width="thinmathspace"></mspace><mn>4</mn></mtd></mtr> <mtr><mtd><mn>0</mn></mtd> <mtd><mo stretchy="false">|</mo></mtd> <mtd><mtext>otherwise</mtext></mtd></mtr></mtable></mrow></mrow></mrow><annotation encoding="application/x-tex">
   H_n^{grp}(G_{ADE}, \mathbb{Z})
   \;\simeq\;
   \left\{
   \array{
     \mathbb{Z} &amp;\vert&amp; n = 0
     \\
-    G^{ab} &amp;\vert&amp;  n = 1 \, mod \, 4
+    G^{ab}_{ADE} &amp;\vert&amp;  n = 1 \, mod \, 4
     \\
     \mathbb{Z}/{\vert G_{ADE}\vert} &amp;\vert&amp; n= 3 \,mod\, 4
     \\
@@ -678,14 +678,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October  8, 2018 at 13:18:09.
+  Last revised on October 27, 2018 at 10:31:59.
   See the <a href="https://ncatlab.org/nlab/history/finite rotation group" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/finite+rotation+group" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/finite+rotation+group/17" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(17 revisions)</span> | <a href="/nlab/show/diff/finite+rotation+group" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/finite+rotation+group" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/finite+rotation+group" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/finite+rotation+group/18" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(18 revisions)</span> | <a href="/nlab/show/diff/finite+rotation+group" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/finite+rotation+group" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/finite rotation group/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
