--- a/pages/17211.html
+++ b/pages/17211.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/6960/#Item_3" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/6960/#Item_4" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -1007,8 +1007,10 @@ margin-left: 0em;
 
 <h2 id="examples_2">Examples</h2>
 
-<div class="num_prop">
+<div class="num_prop" id="BoardmanIsoOn7SphereMod2I">
 <h6 id="proposition_2">Proposition</h6>
+
+<p><strong>(<a class="existingWikiWord" href="/nlab/show/Boardman+homomorphism">Boardman</a> <a class="existingWikiWord" href="/nlab/show/isomorphism">isomorphism</a> on <a class="existingWikiWord" href="/nlab/show/2-sphere">2-sphere</a> mod <a class="existingWikiWord" href="/nlab/show/binary+icosahedral+group">binary icosahedral group</a>)</strong></p>
 
 <p>Consider the <a class="existingWikiWord" href="/nlab/show/binary+icosahedral+group">binary icosahedral group</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mn>2</mn><mi>I</mi></mrow><annotation encoding="application/x-tex">2 I</annotation></semantics></math> and its <a class="existingWikiWord" href="/nlab/show/action">action</a> on the <a class="existingWikiWord" href="/nlab/show/7-sphere">7-sphere</a> induced via the identification <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>S</mi> <mn>7</mn></msup><mo>≃</mo><mi>S</mi><mo stretchy="false">(</mo><mi>ℍ</mi><mo>×</mo><mi>ℍ</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">S^7 \simeq S(\mathbb{H} \times \mathbb{H})</annotation></semantics></math> from the <a class="existingWikiWord" href="/nlab/show/diagonal+action">diagonal</a> of the canonical action of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mn>2</mn><mi>I</mi></mrow><annotation encoding="application/x-tex">2I</annotation></semantics></math> on the <a class="existingWikiWord" href="/nlab/show/quaternions">quaternions</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>ℍ</mi></mrow><annotation encoding="application/x-tex">\mathbb{H}</annotation></semantics></math> induced via it being a <a class="existingWikiWord" href="/nlab/show/finite+subgroup+of+SU%282%29">finite subgroup of SU(2)</a>.</p>
 
@@ -1109,10 +1111,10 @@ margin-left: 0em;
 
 </annotation></semantics></math></div>
 <p>But for every <a class="existingWikiWord" href="/nlab/show/finite+subgroup+of+SU%282%29">finite subgroup of SU(2)</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>G</mi> <mi>ADE</mi></msub><mo>⊂</mo><mi>SU</mi><mo stretchy="false">(</mo><mn>2</mn><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">G_{ADE} \subset SU(2)</annotation></semantics></math> we have (by <a href="https://ncatlab.org/nlab/show/finite+rotation+group#GroupCohomologyOfFiniteSubgroupsOfSU2">this Prop.</a>)</p>
-<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msub><mi>H</mi> <mn>5</mn></msub><mo maxsize="1.2em" minsize="1.2em">(</mo><mi>B</mi><mo stretchy="false">(</mo><mn>2</mn><mi>I</mi><mo stretchy="false">)</mo><mo>,</mo><mi>ℤ</mi><mo stretchy="false">)</mo><mo>≃</mo><mn>0</mn><mphantom><mi>AAA</mi></mphantom><msub><mi>H</mi> <mn>6</mn></msub><mo maxsize="1.2em" minsize="1.2em">(</mo><mi>B</mi><mo stretchy="false">(</mo><mn>2</mn><mi>I</mi><mo stretchy="false">)</mo><mo>,</mo><mi>ℤ</mi><mo stretchy="false">)</mo><mo>≃</mo><msubsup><mi>G</mi> <mi>ADE</mi> <mi>ab</mi></msubsup></mrow><annotation encoding="application/x-tex">
-  H_{5}\big(B(2I), \mathbb{Z}) \simeq 0
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msub><mi>H</mi> <mn>5</mn></msub><mo maxsize="1.2em" minsize="1.2em">(</mo><mi>B</mi><mo stretchy="false">(</mo><mn>2</mn><mi>I</mi><mo stretchy="false">)</mo><mo>,</mo><mi>ℤ</mi><mo stretchy="false">)</mo><mo>≃</mo><msubsup><mi>G</mi> <mi>ADE</mi> <mi>ab</mi></msubsup><mphantom><mi>AAA</mi></mphantom><msub><mi>H</mi> <mn>6</mn></msub><mo maxsize="1.2em" minsize="1.2em">(</mo><mi>B</mi><mo stretchy="false">(</mo><mn>2</mn><mi>I</mi><mo stretchy="false">)</mo><mo>,</mo><mi>ℤ</mi><mo stretchy="false">)</mo><mo>≃</mo><mn>0</mn></mrow><annotation encoding="application/x-tex">
+  H_{5}\big(B(2I), \mathbb{Z}) \simeq G^{ab}_{ADE}
   \phantom{AAA}
-  H_{6}\big(B(2I), \mathbb{Z}) \simeq G^{ab}_{ADE}
+  H_{6}\big(B(2I), \mathbb{Z}) \simeq 0
 
 </annotation></semantics></math></div>
 <p>where <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msubsup><mi>G</mi> <mi>ADE</mi> <mi>ab</mi></msubsup></mrow><annotation encoding="application/x-tex">G^{ab}_{ADE}</annotation></semantics></math> is the <a class="existingWikiWord" href="/nlab/show/abelianization">abelianization</a> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>G</mi> <mi>ADE</mi></msub></mrow><annotation encoding="application/x-tex">G_{ADE}</annotation></semantics></math>. Specifically for <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>G</mi> <mi>ADE</mi></msub><mo>=</mo><mn>2</mn><mi>I</mi></mrow><annotation encoding="application/x-tex">G_{ADE} = 2I</annotation></semantics></math> this does vanish: the <a class="existingWikiWord" href="/nlab/show/binary+icosahedral+group">binary icosahedral group</a> is a <a class="existingWikiWord" href="/nlab/show/perfect+group">perfect group</a> (<a href="icosahedral+group#2IIsPerfect">this Prop.</a>).</p>
@@ -1157,14 +1159,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 27, 2018 at 10:55:23.
+  Last revised on October 27, 2018 at 11:42:33.
   See the <a href="https://ncatlab.org/nlab/history/Boardman homomorphism" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Boardman+homomorphism" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Boardman+homomorphism/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/Boardman+homomorphism" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Boardman+homomorphism" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Boardman+homomorphism" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Boardman+homomorphism/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/Boardman+homomorphism" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Boardman+homomorphism" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Boardman homomorphism/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
