--- a/pages/19883.html
+++ b/pages/19883.html
@@ -317,6 +317,10 @@ margin-left: 0em;
 
 <ul>
 <li>
+<p><a class="existingWikiWord" href="/nlab/show/stable+splitting+of+mapping+spaces">stable splitting of mapping spaces</a></p>
+</li>
+
+<li>
 <p><a class="existingWikiWord" href="/nlab/show/configuration+space+%28mathematics%29">configuration space (mathematics)</a></p>
 </li>
 
@@ -330,14 +334,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Created on October 28, 2018 at 04:10:14.
+  Last revised on October 28, 2018 at 08:18:50.
   See the <a href="https://ncatlab.org/nlab/history/Carl-Friedrich Bödigheimer" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Carl-Friedrich+B%C3%B6digheimer" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/Carl-Friedrich+B%C3%B6digheimer" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Carl-Friedrich+B%C3%B6digheimer/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Carl-Friedrich+B%C3%B6digheimer" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Carl-Friedrich+B%C3%B6digheimer" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Carl-Friedrich Bödigheimer/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
