--- a/pages/19755.html
+++ b/pages/19755.html
@@ -576,7 +576,7 @@ margin-left: 0em;
 <p>where <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>a</mi></mrow><annotation encoding="application/x-tex">a</annotation></semantics></math> corresponds to the 3-cycle, <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">(</mo><mn>123</mn><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">(123)</annotation></semantics></math>, whilst <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>b</mi></mrow><annotation encoding="application/x-tex">b</annotation></semantics></math> corresponds to any transposition. It also has a presentation in which the generators correspond to the transpositions:</p>
 <div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mo stretchy="false">⟨</mo><msub><mi>σ</mi> <mn>1</mn></msub><mo>,</mo><msub><mi>σ</mi> <mn>2</mn></msub><mo stretchy="false">|</mo><msubsup><mi>σ</mi> <mn>1</mn> <mn>2</mn></msubsup><mo>,</mo><msubsup><mi>σ</mi> <mn>2</mn> <mn>2</mn></msubsup><mo>,</mo><mo stretchy="false">(</mo><msub><mi>σ</mi> <mn>1</mn></msub><msub><mi>σ</mi> <mn>2</mn></msub><msup><mo stretchy="false">)</mo> <mn>3</mn></msup><mo stretchy="false">⟩</mo></mrow><annotation encoding="application/x-tex">\langle \sigma_1,\sigma_2 | \sigma_1^2,\sigma_2^2, (\sigma_1\sigma_2)^3\rangle</annotation></semantics></math></div>
 <p>It is easy to see that these relations imply that</p>
-<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msub><mi>σ</mi> <mn>1</mn></msub><msub><mi>σ</mi> <mn>2</mn></msub><msub><mi>σ</mi> <mn>1</mn></msub><mo>=</mo><msub><mi>σ</mi> <mn>2</mn></msub><msub><mi>σ</mi> <mn>1</mn></msub><mi>σ</mi><mn>2</mn></mrow><annotation encoding="application/x-tex">\sigma_1\sigma_2\sigma_1= \sigma_2\sigma_1\sigma2</annotation></semantics></math></div>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msub><mi>σ</mi> <mn>1</mn></msub><msub><mi>σ</mi> <mn>2</mn></msub><msub><mi>σ</mi> <mn>1</mn></msub><mo>=</mo><msub><mi>σ</mi> <mn>2</mn></msub><msub><mi>σ</mi> <mn>1</mn></msub><msub><mi>σ</mi> <mn>2</mn></msub></mrow><annotation encoding="application/x-tex">\sigma_1\sigma_2\sigma_1= \sigma_2\sigma_1\sigma_2</annotation></semantics></math></div>
 <p>which relates this symmetric group to the <a class="existingWikiWord" href="/nlab/show/braid+group">braid group</a>, <strong>Br 3</strong>, and to the <a class="existingWikiWord" href="/nlab/show/trefoil+knot">trefoil group</a>. It is clear that there is an epimorphism <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>S</mi> <mn>3</mn></msub><mo>→</mo><msub><mi>Br</mi> <mn>3</mn></msub></mrow><annotation encoding="application/x-tex">S_3\to Br_3</annotation></semantics></math> obtained by making the two braid generators become the transpositions.</p>
 
 <h3 id="relation_to_the_field_with_one_element">Relation to the field with one element</h3>
@@ -797,14 +797,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 28, 2018 at 08:49:46.
+  Last revised on October 28, 2018 at 09:55:10.
   See the <a href="https://ncatlab.org/nlab/history/symmetric group" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/symmetric+group" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/symmetric+group/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/symmetric+group" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/symmetric+group" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/symmetric+group" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/symmetric+group/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/symmetric+group" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/symmetric+group" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/symmetric group/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
