--- a/pages/18070.html
+++ b/pages/18070.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -750,6 +750,10 @@ margin-left: 0em;
 <ul>
 <li><a href='#idea'>Idea</a></li>
 <li><a href='#definition'>Definition</a></li>
+<li><a href='#properties'>Properties</a></li>
+<ul>
+<li><a href='#CocycleSpacesAndScanningMap'>Cocycle spaces and the Scanning map</a></li>
+</ul>
 <li><a href='#examples'>Examples</a></li>
 <ul>
 <li><a href='#classifying_space_of_the_symmetric_group'>Classifying space of the symmetric group</a></li>
@@ -777,6 +781,33 @@ margin-left: 0em;
 
 <p>(…)</p>
 
+<h2 id="properties">Properties</h2>
+
+<h3 id="CocycleSpacesAndScanningMap">Cocycle spaces and the Scanning map</h3>
+
+<p>For <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>X</mi></mrow><annotation encoding="application/x-tex">X</annotation></semantics></math> a <a class="existingWikiWord" href="/nlab/show/compact+topological+space">compact</a> <a class="existingWikiWord" href="/nlab/show/manifold">manifold</a> and <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>A</mi></mrow><annotation encoding="application/x-tex">A</annotation></semantics></math> a <a class="existingWikiWord" href="/nlab/show/pointed+topological+space">pointed topological space</a> (“<a class="existingWikiWord" href="/nlab/show/charge">charge</a> <a class="existingWikiWord" href="/nlab/show/coefficients">coefficients</a>”), there is the <span class="newWikiWord">scanning map<a href="/nlab/new/scanning+map">?</a></span></p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>Conf</mi><mo stretchy="false">(</mo><mi>X</mi><mo>,</mo><mi>A</mi><mo stretchy="false">)</mo><mo>⟶</mo><mi>Γ</mi><mo stretchy="false">(</mo><msub><mi>S</mi> <mi>X</mi></msub><mo stretchy="false">(</mo><mi>T</mi><mi>X</mi><mo stretchy="false">)</mo><msub><mo>∧</mo> <mi>X</mi></msub><mi>A</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">
+  Conf(X, A)
+  \longrightarrow
+  \Gamma( S_X(T X)\wedge_X A  )
+
+</annotation></semantics></math></div>
+<p>from the configuration space of points in <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>X</mi></mrow><annotation encoding="application/x-tex">X</annotation></semantics></math> with charge in <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>A</mi></mrow><annotation encoding="application/x-tex">A</annotation></semantics></math> and <a class="existingWikiWord" href="/nlab/show/continuous+function">continuous</a> <a class="existingWikiWord" href="/nlab/show/sections">sections</a> of the <a class="existingWikiWord" href="/nlab/show/spherical+fibration">spherical fibration</a> induced by the <a class="existingWikiWord" href="/nlab/show/tangent+bundle">tangent bundle</a> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>X</mi></mrow><annotation encoding="application/x-tex">X</annotation></semantics></math> <a class="existingWikiWord" href="/nlab/show/fiber">fiber</a>-wise <a class="existingWikiWord" href="/nlab/show/smash+product">smashed</a> with the <a class="existingWikiWord" href="/nlab/show/coefficients">coefficients</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>A</mi></mrow><annotation encoding="application/x-tex">A</annotation></semantics></math>.</p>
+
+<p>Under mild conditions, this is a <a class="existingWikiWord" href="/nlab/show/homotopy+equivalence">homotopy equivalence</a>.</p>
+
+<p>This is due to (<a href="#McDuff75">McDuff 75</a>), for review see (<a href="#Boedigheimer87">Bödigheimer 87, Prop. 2</a>, <a href="#FrancisLect17">Francis Lecture 17, Theorem 1.1</a>).</p>
+
+<p>If here <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>A</mi><mo>=</mo><msup><mi>S</mi> <mi>n</mi></msup></mrow><annotation encoding="application/x-tex">A = S^n</annotation></semantics></math> is an <a class="existingWikiWord" href="/nlab/show/n-sphere">n-sphere</a> regarded as <a class="existingWikiWord" href="/nlab/show/coefficients">coefficients</a> for <a class="existingWikiWord" href="/nlab/show/non-abelian+cohomology">non-abelian cohomology</a>, then this equivalence identifies the configuration space with the <a class="existingWikiWord" href="/nlab/show/cocycle">cocycle</a> space/<a class="existingWikiWord" href="/nlab/show/infinity-groupoid">infinity-groupoid</a> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>τ</mi> <mi>X</mi></msub></mrow><annotation encoding="application/x-tex">\tau_X</annotation></semantics></math>-<a class="existingWikiWord" href="/nlab/show/twisted+cohomology">twisted</a> <a class="existingWikiWord" href="/nlab/show/cohomotopy">cohomotopy</a> in degree <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>τ</mi><mo>+</mo><mi>n</mi></mrow><annotation encoding="application/x-tex">\tau + n</annotation></semantics></math>, where <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>τ</mi> <mi>X</mi></msub><mo>≔</mo><mo stretchy="false">[</mo><msub><mi>S</mi> <mi>X</mi></msub><mo stretchy="false">(</mo><mi>T</mi><mi>X</mi><mo stretchy="false">)</mo><mo stretchy="false">]</mo></mrow><annotation encoding="application/x-tex">\tau_X \coloneqq [S_X(T X)]</annotation></semantics></math> is the class of the <a class="existingWikiWord" href="/nlab/show/spherical+fibration">spherical fibration</a> of the tangent bundle.</p>
+
+<p>In particular if <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>X</mi></mrow><annotation encoding="application/x-tex">X</annotation></semantics></math> is a <a class="existingWikiWord" href="/nlab/show/parallelizable+manifold">parallelizable manifold</a>/<a class="existingWikiWord" href="/nlab/show/framed+manifold">framed manifold</a>, then <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>τ</mi> <mi>X</mi></msub><mo>=</mo><mi>dim</mi><mo stretchy="false">(</mo><mi>X</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">\tau_X = dim(X)</annotation></semantics></math> and the equivalence identifies the configuration space with the plain <a class="existingWikiWord" href="/nlab/show/cohomotopy">cohomotopy</a> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>X</mi></mrow><annotation encoding="application/x-tex">X</annotation></semantics></math> in degree <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>dim</mi><mo stretchy="false">(</mo><mi>X</mi><mo stretchy="false">)</mo><mo>+</mo><mi>n</mi></mrow><annotation encoding="application/x-tex">dim(X) + n</annotation></semantics></math>:</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>Conf</mi><mo stretchy="false">(</mo><mi>X</mi><mo>,</mo><msup><mi>S</mi> <mi>n</mi></msup><mo stretchy="false">)</mo><mspace width="thickmathspace"></mspace><mo>≃</mo><mspace width="thickmathspace"></mspace><mi>Maps</mi><mo stretchy="false">(</mo><mi>X</mi><mo>,</mo><msup><mi>S</mi> <mrow><mi>dim</mi><mo stretchy="false">(</mo><mi>X</mi><mo stretchy="false">)</mo><mo>+</mo><mi>n</mi></mrow></msup><mo stretchy="false">)</mo><mspace width="thinmathspace"></mspace><mo>.</mo></mrow><annotation encoding="application/x-tex">
+  Conf(X,S^n)
+  \;\simeq\;
+  Maps( X, S^{dim(X) + n} )
+  \,.
+
+</annotation></semantics></math></div>
 <h2 id="examples">Examples</h2>
 
 <h3 id="classifying_space_of_the_symmetric_group">Classifying space of the symmetric group</h3>
@@ -808,7 +839,7 @@ margin-left: 0em;
 <p>Review includes</p>
 
 <ul>
-<li>
+<li id="FrancisLect17">
 <p><a class="existingWikiWord" href="/nlab/show/John+Francis">John Francis</a>, <em>The H-Principle Lecture 17: The sheaf oof configuration spaces and the scanning map</em> (<a href="http://math.northwestern.edu/~jnkf/classes/hprin/17configmapping.pdf">pdf</a>)</p>
 </li>
 
@@ -864,14 +895,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 28, 2018 at 08:58:11.
+  Last revised on October 28, 2018 at 09:37:10.
   See the <a href="https://ncatlab.org/nlab/history/configuration space (mathematics)" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/configuration+space+%28mathematics%29" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/configuration+space+%28mathematics%29/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/configuration+space+%28mathematics%29" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/configuration+space+%28mathematics%29" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/configuration+space+%28mathematics%29" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/configuration+space+%28mathematics%29/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/configuration+space+%28mathematics%29" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/configuration+space+%28mathematics%29" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/configuration space (mathematics)/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
