--- a/pages/7672.html
+++ b/pages/7672.html
@@ -807,8 +807,10 @@ margin-left: 0em;
 
 <p>It is immediate that:</p>
 
-<div class="num_prop">
+<div class="num_prop" id="SphericalFibrationsOfVectorBundlesClassifiedViaJ">
 <h6 id="proposition">Proposition</h6>
+
+<p><strong>(<a class="existingWikiWord" href="/nlab/show/spherical+fibrations">spherical fibrations</a> of <a class="existingWikiWord" href="/nlab/show/vector+bundles">vector bundles</a> classified via J-homomorphism)</strong></p>
 
 <p>For <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>V</mi><mo>→</mo><mi>X</mi></mrow><annotation encoding="application/x-tex">V \to X</annotation></semantics></math> a <a class="existingWikiWord" href="/nlab/show/vector+bundle">vector bundle</a> classified by a map <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>X</mi><mo>→</mo><mi>B</mi><mi>O</mi></mrow><annotation encoding="application/x-tex">X \to B O</annotation></semantics></math>, the corresponding <a class="existingWikiWord" href="/nlab/show/spherical+fibration">spherical fibration</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>𝕊</mi> <mi>V</mi></msup></mrow><annotation encoding="application/x-tex">\mathbb{S}^V</annotation></semantics></math>, def. <a class="maruku-ref" href="#SphereBundleOfVectorBundle"></a>, is classified by <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>X</mi><mo>→</mo><mi>B</mi><mi>O</mi><mover><mo>⟶</mo><mrow><mi>B</mi><mi>J</mi></mrow></mover><mi>B</mi><msub><mi>GL</mi> <mn>1</mn></msub><mo stretchy="false">(</mo><mi>𝕊</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">X \to B O \stackrel{B J}{\longrightarrow} B GL_1(\mathbb{S})</annotation></semantics></math>, def. <a class="maruku-ref" href="#DeloopedJ"></a>.</p>
 </div>
@@ -1070,6 +1072,10 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/J-homomorphism+and+chromatic+homotopy">J-homomorphism and chromatic homotopy</a></p>
 </li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/scanning+map+equivalence">scanning map equivalence</a></p>
+</li>
 </ul>
 
 <h2 id="references">References</h2>
@@ -1269,14 +1275,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 27, 2018 at 07:24:51.
+  Last revised on October 28, 2018 at 13:33:46.
   See the <a href="https://ncatlab.org/nlab/history/J-homomorphism" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/J-homomorphism" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/J-homomorphism/35" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(35 revisions)</span> | <a href="/nlab/show/diff/J-homomorphism" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/J-homomorphism" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/J-homomorphism" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/J-homomorphism/36" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(36 revisions)</span> | <a href="/nlab/show/diff/J-homomorphism" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/J-homomorphism" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/J-homomorphism/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
