--- a/pages/19871.html
+++ b/pages/19871.html
@@ -384,20 +384,20 @@ margin-left: 0em;
 <h2 id="uniqueness">Uniqueness</h2>
 
 <p>include <span class="newWikiWord">Initiality Project - Uniqueness - Pi-types<a href="/nlab/new/Initiality+Project+-+Uniqueness+-+Pi-types">?</a></span></p>
-</body></html>
+<div class="property">category: <a class="category_link" href="/nlab/all_pages/Initiality+Project">Initiality Project</a></div></body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on October 28, 2018 at 01:53:56.
+  Last revised on October 28, 2018 at 15:41:09.
   See the <a href="https://ncatlab.org/nlab/history/Initiality Project - Pi-types" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Initiality+Project+-+Pi-types" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Initiality+Project+-+Pi-types/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Initiality+Project+-+Pi-types" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Initiality+Project+-+Pi-types" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Initiality+Project+-+Pi-types" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Initiality+Project+-+Pi-types/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Initiality+Project+-+Pi-types" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Initiality+Project+-+Pi-types" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Initiality Project - Pi-types/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
