--- a/pages/19879.html
+++ b/pages/19879.html
@@ -396,20 +396,20 @@ margin-left: 0em;
 
 <li>If <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Γ</mi></mrow><annotation encoding="application/x-tex">\Gamma</annotation></semantics></math> is valid and <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Γ</mi><mo>⊢</mo><mi>T</mi><mo>⇐</mo><mi>A</mi></mrow><annotation encoding="application/x-tex">\Gamma \vdash T \Leftarrow A</annotation></semantics></math> is derivable, we similarly obtain an element <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo lspace="0em" rspace="thinmathspace">&#x27E6;</mo><mi>T</mi><msubsup><mo lspace="0em" rspace="thinmathspace">&#x27E7;</mo> <mrow><mo>⇐</mo><mi>A</mi></mrow> <mi>Γ</mi></msubsup></mrow><annotation encoding="application/x-tex">\&#x27E6; T \&#x27E7;^\Gamma_{\Leftarrow A}</annotation></semantics></math> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Tm</mi><mo stretchy="false">(</mo><mo lspace="0em" rspace="thinmathspace">&#x27E6;</mo><mi>Γ</mi><mo lspace="0em" rspace="thinmathspace">&#x27E7;</mo><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">Tm(\&#x27E6; \Gamma\&#x27E7;)</annotation></semantics></math>, whose underlying semantic type is <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo lspace="0em" rspace="thinmathspace">&#x27E6;</mo><mi>A</mi><msubsup><mo lspace="0em" rspace="thinmathspace">&#x27E7;</mo> <mi>type</mi> <mi>Γ</mi></msubsup></mrow><annotation encoding="application/x-tex">\&#x27E6; A \&#x27E7;^\Gamma_{type}</annotation></semantics></math>.</li>
 </ul>
-</body></html>
+<div class="property">category: <a class="category_link" href="/nlab/all_pages/Initiality+Project">Initiality Project</a></div></body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Created on October 28, 2018 at 01:38:13.
+  Last revised on October 28, 2018 at 15:42:26.
   See the <a href="https://ncatlab.org/nlab/history/Initiality Project - Totality" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Initiality+Project+-+Totality" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/Initiality+Project+-+Totality" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Initiality+Project+-+Totality/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Initiality+Project+-+Totality" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Initiality+Project+-+Totality" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Initiality Project - Totality/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
