--- a/pages/19880.html
+++ b/pages/19880.html
@@ -335,20 +335,20 @@ margin-left: 0em;
 <h2 id="the_tautological_interpretation">The tautological interpretation</h2>
 
 <p>TODO</p>
-</body></html>
+<div class="property">category: <a class="category_link" href="/nlab/all_pages/Initiality+Project">Initiality Project</a></div></body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Created on October 28, 2018 at 01:47:39.
+  Last revised on October 28, 2018 at 15:42:45.
   See the <a href="https://ncatlab.org/nlab/history/Initiality Project - Uniqueness" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Initiality+Project+-+Uniqueness" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/Initiality+Project+-+Uniqueness" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Initiality+Project+-+Uniqueness/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Initiality+Project+-+Uniqueness" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Initiality+Project+-+Uniqueness" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Initiality Project - Uniqueness/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
